<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <item
        android:id="@+id/activity_main_drawer_games"
        android:icon="@drawable/ic_videogame_asset_black_24dp"
        android:title="@string/jeu"/>

    <item
        android:id="@+id/activity_main_drawer_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/preferences"/>

    <item
        android:id="@+id/activity_main_drawer_contact"
        android:icon="@drawable/ic_perm_contact_calendar_black_24dp"
        android:title="@string/contact"/>


    <!--
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/activity_main_drawer_games"
            android:icon="@drawable/ic_videogame_asset_black_24dp"
            android:title="Mini-jeux"/>
    </group>

    <item android:title="Autres">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/activity_main_drawer_settings"
                    android:icon="@drawable/ic_settings_black_24dp"
                    android:title="Préférences"/>
                <item
                    android:id="@+id/activity_main_drawer_contact"
                    android:icon="@drawable/ic_perm_contact_calendar_black_24dp"
                    android:title="Nous contacter"/>
            </group>
        </menu>
    </item>
 -->
</menu>
