<LinearLayout android:id="@+id/fragment_page_maps_rootview"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="e.clement.a205enroot.MainActivity"
    android:gravity="center"
    android:background="#EDD9CF"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="ifContentScrolls"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="50dp"
                android:layout_weight="75"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/root_titre1"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginTop="4dp"
                    android:gravity="center"
                    android:padding="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/root_p1"
                    android:textSize="12sp"
                    android:textAlignment="center"
                    android:layout_margin="5dp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/root_p2"
                    android:textSize="12sp"
                    android:textAlignment="textStart"
                    />
                <ImageView
                    android:layout_margin="10dp"
                    android:layout_gravity="center"
                    android:layout_width="300dp"
                    android:layout_height="160dp"
                    app:srcCompat="@drawable/logo_association"
                    android:scaleType="centerCrop"
                    />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/root_titre2"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginTop="4dp"
                    android:gravity="center"
                    android:padding="5dp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/root_p3"
                    android:textSize="12sp"
                    android:textAlignment="textStart"
                    />
            </LinearLayout>
            <!--
            <TextView
            android:id="@+id/fragment_trophy_event_page_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dip"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#fff"
            android:textAlignment="center"
            android:text="Présentation du 205 Trophées"
        />
        -->

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>